@@ -3,6 +3,9 @@ Release CMTK-1.1.4:
 - Fixed: bundled DICOM library finally works on all tested platforms and all
     tested compilers.
 
+- Removed: support for AMD Core Math Library (ACML), which was rarely used and
+    complicated code unnecessarily
+
 
 Release CMTK-1.1.3 (2009-11-18):
 
